# analytics-collector

./: .env.example  .gitignore  README.md  pyproject.toml
src/analytics_collector/: __init__.py  analytics.py  app.py  config.py  geo.py  models.py  rate_limit.py  repository.py
tests/: test_analytics.py  test_api.py  test_app.py
