[project]
name = "analytics-collector"
version = "0.1.0"
description = "FastAPI service for collecting leaderboard analytics events"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "motor>=3.6.0",
    "pydantic-settings>=2.6.0",
    "uvicorn[standard]>=0.32.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/analytics_collector"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
